usage from platform thread to virtual thread